--- a/composer.json
+++ b/composer.json
@@ -18,16 +18,15 @@
   ],
   "require": {
     "php": ">=5.5.9",
-    "guzzlehttp/guzzle": "^6.2"
+    "guzzlehttp/guzzle": "^6.2",
+    "illuminate/support": "^5.2"
   },
   "require-dev": {
-    "laravel/framework": "~5.2",
     "phpunit/phpunit": "~4.0"
   },
   "autoload": {
     "psr-4": {
       "anewmanjones\\laravelSalesforceREST\\": "src/anewmanjones/laravelSalesforceREST"
     }
-  },
-  "minimum-stability": "dev"
+  }
 }
